k8s/apps/multimedia/transmission/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-dns01
    item.homer.rajsingh.info/name: "Transmission"
    item.homer.rajsingh.info/subtitle: "Downloader"
    item.homer.rajsingh.info/logo: "https://cdn.jsdelivr.net/npm/@loganmarchione/homelab-svg-assets@latest/assets/transmission.svg"
    item.homer.rajsingh.info/tag: "local"
    item.homer.rajsingh.info/tagstyle: "is-success"
    item.homer.rajsingh.info/order: "10"
    service.homer.rajsingh.info/name: "Multimedia"
    service.homer.rajsingh.info/icon: "fa fa-tv"
    service.homer.rajsingh.info/order: "20"
    traefik.http.middlewares.add-foo.addprefix.prefix: /transmission/web
  labels:
    homer.rajsingh.info/enabled: "true"
  name: downloader
spec:
  ingressClassName: private
  rules:
    - host: downloader.ankhmorpork.thaum.xyz
      http:
        paths:
          - backend:
              service:
                name: transmission
                port:
                  number: 9091
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - downloader.ankhmorpork.thaum.xyz
      secretName: downloader-ankhmorpork-thaum-xyz-tls
